set(BRLCAD_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE PATH "BRL-CAD include path")

add_library(brlcad SHARED IMPORTED GLOBAL)

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    set(BRLCAD_COREINTERFACE_IMPORT "-DBRLCAD_COREINTERFACE_EXPORT=__declspec(dllimport)" CACHE PATH "BRL-CAD library linker specification")

    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(BRLCAD_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/bin64/brlcad.dll")
        set(BRLCAD_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib64/brlcad.lib")
        set_property(TARGET brlcad PROPERTY IMPORTED_LOCATION ${BRLCAD_LOCATION})
        set_property(TARGET brlcad PROPERTY IMPORTED_IMPLIB ${BRLCAD_IMPLIB})
        install(FILES ${BRLCAD_LOCATION} DESTINATION bin)
    elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
        set(BRLCAD_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/bin32/brlcad.dll")
        set(BRLCAD_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib32/brlcad.lib")
        set_property(TARGET brlcad PROPERTY IMPORTED_LOCATION ${BRLCAD_LOCATION})
        set_property(TARGET brlcad PROPERTY IMPORTED_IMPLIB ${BRLCAD_IMPLIB})
        install(FILES ${BRLCAD_LOCATION} DESTINATION bin)
    endif(CMAKE_SIZEOF_VOID_P EQUAL 8)
endif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
